--- a/ExpensesTracker/Views/UserExpenses/Edit.cshtml
+++ b/ExpensesTracker/Views/UserExpenses/Edit.cshtml
@@ -19,12 +19,12 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PlaceOfPurchase" class="control-label"></label>
+                <label asp-for="PlaceOfPurchase" class="control-label">Place of purchase</label>
                 <input asp-for="PlaceOfPurchase" class="form-control" />
                 <span asp-validation-for="PlaceOfPurchase" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AmountIncludingVAT" class="control-label"></label>
+                <label asp-for="AmountIncludingVAT" class="control-label">Amount including VAT</label>
                 <input asp-for="AmountIncludingVAT" class="form-control" />
                 <span asp-validation-for="AmountIncludingVAT" class="text-danger"></span>
             </div>
